# Mata-Nui-AudioForge

./: Nui.py  README.md  embedMetaData.py  picardAuto.py  pyproject.toml  requirements.txt  thumbnail1-1Crop.py
nui/: ScanAndSave.txt  embedMetaData.py  maybecuttingscript.py  nui.py  overrideimage.py  picardCanary.py
