[build-system]
requires = ["hatchling", "eyed3", "picard", "yt-dlp"]
build-backend = "hatchling.build"
[project]
name = "Mata-Nui-AudioForge"
version = "0.0.1"
authors = [
  { name="EdgeLordKirito", email="Leiteritz.till@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nui"]

[project.scripts]
nui = "nui:main"


[project.urls]
Homepage = "https://github.com/EdgeLordKirito/Mata-Nui-AudioForge"
Issues = "https://github.com/EdgeLordKirito/Mata-Nui-AudioForge/issues"